Implemented neural network-based credit prediction system with recommendation engine